curs/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    RESERVED_CONST
    RESERVED_FALSE
    RESERVED_TRUE

Grammar

Rule 0     S' -> program
Rule 1     sign -> +
Rule 2     sign -> -
Rule 3     non_string -> DIGITSEQ
Rule 4     identifier_list -> identifier_list comma identifier
Rule 5     identifier_list -> identifier
Rule 6     constant -> non_string
Rule 7     constant -> sign non_string
Rule 8     type_definition_list -> type_definition_list type_definition
Rule 9     type_definition_list -> type_definition
Rule 10    type_definition -> identifier = type_denoter semicolon
Rule 11    type_denoter -> identifier
Rule 12    component_type -> identifier
Rule 13    domain_type -> identifier
Rule 14    variable_declaration_part -> RESERVED_VAR variable_declaration_list semicolon
Rule 15    variable_declaration -> identifier_list COLON type_denoter
Rule 16    variable_declaration_list -> variable_declaration_list semicolon variable_declaration
Rule 17    variable_declaration_list -> variable_declaration
Rule 18    procedure_and_function_declaration_part -> function_declaration semicolon
Rule 19    formal_parameter_section_list -> formal_parameter_section_list semicolon formal_parameter_section
Rule 20    formal_parameter_section_list -> formal_parameter_section
Rule 21    formal_parameter_list -> LPAREN formal_parameter_section_list RPAREN
Rule 22    formal_parameter_section -> value_parameter_specification
Rule 23    formal_parameter_section -> variable_parameter_specification
Rule 24    value_parameter_specification -> identifier_list COLON identifier
Rule 25    procedure_block -> block
Rule 26    simple_expression -> term
Rule 27    simple_expression -> simple_expression addop term
Rule 28    function_declaration -> function_identification semicolon function_block
Rule 29    function_declaration -> function_heading semicolon function_block
Rule 30    function_heading -> RESERVED_FUNCTION identifier COLON result_type
Rule 31    function_heading -> RESERVED_FUNCTION identifier marker_fh formal_parameter_list COLON result_type
Rule 32    declaration_part_list -> declaration_part_list declaration_entity
Rule 33    declaration_part_list -> declaration_entity
Rule 34    marker_fh -> <empty>
Rule 35    primary -> variable_access
Rule 36    primary -> unsigned_constant
Rule 37    primary -> function_designator
Rule 38    result_type -> identifier
Rule 39    function_identification -> RESERVED_FUNCTION identifier
Rule 40    function_block -> block
Rule 41    statement_part -> compound_statement
Rule 42    compound_statement -> RESERVED_BEGIN statement_sequence RESERVED_END
Rule 43    variable_parameter_specification -> RESERVED_VAR identifier_list COLON identifier
Rule 44    statement_sequence -> statement_sequence semicolon statement
Rule 45    statement_sequence -> statement
Rule 46    statement -> open_statement
Rule 47    statement -> closed_statement
Rule 48    open_statement -> non_labeled_open_statement
Rule 49    closed_statement -> non_labeled_closed_statement
Rule 50    non_labeled_closed_statement -> assignment_statement
Rule 51    non_labeled_closed_statement -> procedure_statement
Rule 52    non_labeled_closed_statement -> compound_statement
Rule 53    non_labeled_closed_statement -> repeat_statement
Rule 54    non_labeled_closed_statement -> closed_while_statement
Rule 55    non_labeled_closed_statement -> closed_for_statement
Rule 56    non_labeled_closed_statement -> <empty>
Rule 57    non_labeled_open_statement -> open_if_statement
Rule 58    non_labeled_open_statement -> open_while_statement
Rule 59    non_labeled_open_statement -> open_for_statement
Rule 60    repeat_statement -> RESERVED_REPEAT repeat_begin_marker statement_sequence RESERVED_UNTIL boolean_expression
Rule 61    repeat_begin_marker -> <empty>
Rule 62    open_while_statement -> RESERVED_WHILE boolean_expression marker_while RESERVED_DO open_statement
Rule 63    closed_while_statement -> RESERVED_WHILE boolean_expression marker_while RESERVED_DO closed_statement
Rule 64    marker_while -> <empty>
Rule 65    open_for_statement -> RESERVED_FOR control_variable ASSIGNMENT initial_value direction final_value marker_for_for_branching RESERVED_DO open_statement
Rule 66    closed_for_statement -> RESERVED_FOR control_variable ASSIGNMENT initial_value direction final_value marker_for_for_branching RESERVED_DO closed_statement
Rule 67    marker_for_for_branching -> <empty>
Rule 68    open_if_statement -> RESERVED_IF boolean_expression RESERVED_THEN marker_for_branching statement
Rule 69    marker_if_false -> <empty>
Rule 70    marker_for_branching -> <empty>
Rule 71    assignment_statement -> variable_access ASSIGNMENT expression
Rule 72    variable_access -> identifier
Rule 73    index_expression_list -> index_expression_list comma index_expression
Rule 74    index_expression_list -> index_expression
Rule 75    index_expression -> expression
Rule 76    procedure_statement -> identifier params
Rule 77    procedure_statement -> identifier
Rule 78    declaration_entity -> procedure_and_function_declaration_part
Rule 79    params -> LPAREN actual_parameter_list RPAREN
Rule 80    actual_parameter_list -> actual_parameter_list comma actual_parameter
Rule 81    actual_parameter_list -> actual_parameter
Rule 82    actual_parameter -> expression
Rule 83    actual_parameter -> expression COLON expression
Rule 84    actual_parameter -> expression COLON expression COLON expression
Rule 85    control_variable -> identifier
Rule 86    initial_value -> expression
Rule 87    direction -> RESERVED_TO
Rule 88    final_value -> expression
Rule 89    record_variable_list -> record_variable_list comma variable_access
Rule 90    record_variable_list -> variable_access
Rule 91    boolean_expression -> expression
Rule 92    unsigned_constant -> unsigned_number
Rule 93    unsigned_constant -> STRING
Rule 94    block -> declaration_part_list statement_part
Rule 95    block -> statement_part
Rule 96    declaration_entity -> variable_declaration_part
Rule 97    expression -> simple_expression
Rule 98    expression -> simple_expression relop simple_expression
Rule 99    term -> factor
Rule 100   term -> term mulop factor
Rule 101   factor -> sign factor
Rule 102   factor -> exponentiation
Rule 103   exponentiation -> primary
Rule 104   primary -> LPAREN expression RPAREN
Rule 105   primary -> RESERVED_NOT primary
Rule 106   unsigned_number -> unsigned_integer
Rule 107   unsigned_number -> unsigned_real
Rule 108   unsigned_integer -> DIGITSEQ
Rule 109   unsigned_real -> REALNUMBER
Rule 110   function_designator -> identifier params
Rule 111   addop -> +
Rule 112   addop -> -
Rule 113   addop -> RESERVED_OR
Rule 114   mulop -> *
Rule 115   mulop -> /
Rule 116   mulop -> RESERVED_DIV
Rule 117   mulop -> RESERVED_MOD
Rule 118   mulop -> RESERVED_AND
Rule 119   relop -> =
Rule 120   relop -> NOTEQ
Rule 121   relop -> <
Rule 122   relop -> >
Rule 123   relop -> LESSOREQ
Rule 124   relop -> MOREOREQ
Rule 125   identifier -> IDENTIFIER
Rule 126   identifier -> RESERVED_STRING
Rule 127   semicolon -> SEMI_COLON
Rule 128   comma -> COMMA
Rule 129   program -> program_heading semicolon block DOT
Rule 130   program_heading -> RESERVED_PROGRAM identifier
Rule 131   program_heading -> RESERVED_PROGRAM identifier LPAREN identifier_list RPAREN

Terminals, with rules where they appear

*                    : 114
+                    : 1 111
-                    : 2 112
/                    : 115
<                    : 121
=                    : 10 119
>                    : 122
ASSIGNMENT           : 65 66 71
COLON                : 15 24 30 31 43 83 84 84
COMMA                : 128
COMMENT              : 
DIGITSEQ             : 3 108
DOT                  : 129
IDENTIFIER           : 125
LESSOREQ             : 123
LPAREN               : 21 79 104 131
MOREOREQ             : 124
NOTEQ                : 120
REALNUMBER           : 109
RESERVED_AND         : 118
RESERVED_BEGIN       : 42
RESERVED_CONST       : 
RESERVED_DIV         : 116
RESERVED_DO          : 62 63 65 66
RESERVED_END         : 42
RESERVED_FALSE       : 
RESERVED_FOR         : 65 66
RESERVED_FUNCTION    : 30 31 39
RESERVED_IF          : 68
RESERVED_MOD         : 117
RESERVED_NOT         : 105
RESERVED_OR          : 113
RESERVED_PROGRAM     : 130 131
RESERVED_REPEAT      : 60
RESERVED_STRING      : 126
RESERVED_THEN        : 68
RESERVED_TO          : 87
RESERVED_TRUE        : 
RESERVED_UNTIL       : 60
RESERVED_VAR         : 14 43
RESERVED_WHILE       : 62 63
RPAREN               : 21 79 104 131
SEMI_COLON           : 127
STRING               : 93
error                : 

Nonterminals, with rules where they appear

actual_parameter     : 80 81
actual_parameter_list : 79 80
addop                : 27
assignment_statement : 50
block                : 25 40 129
boolean_expression   : 60 62 63 68
closed_for_statement : 55
closed_statement     : 47 63 66
closed_while_statement : 54
comma                : 4 73 80 89
component_type       : 
compound_statement   : 41 52
constant             : 
control_variable     : 65 66
declaration_entity   : 32 33
declaration_part_list : 32 94
direction            : 65 66
domain_type          : 
exponentiation       : 102
expression           : 71 75 82 83 83 84 84 84 86 88 91 104
factor               : 99 100 101
final_value          : 65 66
formal_parameter_list : 31
formal_parameter_section : 19 20
formal_parameter_section_list : 19 21
function_block       : 28 29
function_declaration : 18
function_designator  : 37
function_heading     : 29
function_identification : 28
identifier           : 4 5 10 11 12 13 24 30 31 38 39 43 72 76 77 85 110 130 131
identifier_list      : 4 15 24 43 131
index_expression     : 73 74
index_expression_list : 73
initial_value        : 65 66
marker_fh            : 31
marker_for_branching : 68
marker_for_for_branching : 65 66
marker_if_false      : 
marker_while         : 62 63
mulop                : 100
non_labeled_closed_statement : 49
non_labeled_open_statement : 48
non_string           : 6 7
open_for_statement   : 59
open_if_statement    : 57
open_statement       : 46 62 65
open_while_statement : 58
params               : 76 110
primary              : 103 105
procedure_and_function_declaration_part : 78
procedure_block      : 
procedure_statement  : 51
program              : 0
program_heading      : 129
record_variable_list : 89
relop                : 98
repeat_begin_marker  : 60
repeat_statement     : 53
result_type          : 30 31
semicolon            : 10 14 16 18 19 28 29 44 129
sign                 : 7 101
simple_expression    : 27 97 98 98
statement            : 44 45 68
statement_part       : 94 95
statement_sequence   : 42 44 60
term                 : 26 27 100
type_definition      : 8 9
type_definition_list : 8
type_denoter         : 10 15
unsigned_constant    : 36
unsigned_integer     : 106
unsigned_number      : 92
unsigned_real        : 107
value_parameter_specification : 22
variable_access      : 35 71 89 90
variable_declaration : 16 17
variable_declaration_list : 14 16
variable_declaration_part : 96
variable_parameter_specification : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (129) program -> . program_heading semicolon block DOT
    (130) program_heading -> . RESERVED_PROGRAM identifier
    (131) program_heading -> . RESERVED_PROGRAM identifier LPAREN identifier_list RPAREN

    RESERVED_PROGRAM shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (129) program -> program_heading . semicolon block DOT
    (127) semicolon -> . SEMI_COLON

    SEMI_COLON      shift and go to state 5

    semicolon                      shift and go to state 4

state 3

    (130) program_heading -> RESERVED_PROGRAM . identifier
    (131) program_heading -> RESERVED_PROGRAM . identifier LPAREN identifier_list RPAREN
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING

    IDENTIFIER      shift and go to state 7
    RESERVED_STRING shift and go to state 8

    identifier                     shift and go to state 6

state 4

    (129) program -> program_heading semicolon . block DOT
    (94) block -> . declaration_part_list statement_part
    (95) block -> . statement_part
    (32) declaration_part_list -> . declaration_part_list declaration_entity
    (33) declaration_part_list -> . declaration_entity
    (41) statement_part -> . compound_statement
    (78) declaration_entity -> . procedure_and_function_declaration_part
    (96) declaration_entity -> . variable_declaration_part
    (42) compound_statement -> . RESERVED_BEGIN statement_sequence RESERVED_END
    (18) procedure_and_function_declaration_part -> . function_declaration semicolon
    (14) variable_declaration_part -> . RESERVED_VAR variable_declaration_list semicolon
    (28) function_declaration -> . function_identification semicolon function_block
    (29) function_declaration -> . function_heading semicolon function_block
    (39) function_identification -> . RESERVED_FUNCTION identifier
    (30) function_heading -> . RESERVED_FUNCTION identifier COLON result_type
    (31) function_heading -> . RESERVED_FUNCTION identifier marker_fh formal_parameter_list COLON result_type

    RESERVED_BEGIN  shift and go to state 16
    RESERVED_VAR    shift and go to state 18
    RESERVED_FUNCTION shift and go to state 21

    block                          shift and go to state 9
    declaration_part_list          shift and go to state 10
    statement_part                 shift and go to state 11
    declaration_entity             shift and go to state 12
    compound_statement             shift and go to state 13
    procedure_and_function_declaration_part shift and go to state 14
    variable_declaration_part      shift and go to state 15
    function_declaration           shift and go to state 17
    function_identification        shift and go to state 19
    function_heading               shift and go to state 20

state 5

    (127) semicolon -> SEMI_COLON .

    RESERVED_BEGIN  reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_VAR    reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_FUNCTION reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_IF     reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_WHILE  reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_FOR    reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_REPEAT reduce using rule 127 (semicolon -> SEMI_COLON .)
    IDENTIFIER      reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_STRING reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_END    reduce using rule 127 (semicolon -> SEMI_COLON .)
    SEMI_COLON      reduce using rule 127 (semicolon -> SEMI_COLON .)
    RESERVED_UNTIL  reduce using rule 127 (semicolon -> SEMI_COLON .)


state 6

    (130) program_heading -> RESERVED_PROGRAM identifier .
    (131) program_heading -> RESERVED_PROGRAM identifier . LPAREN identifier_list RPAREN

    SEMI_COLON      reduce using rule 130 (program_heading -> RESERVED_PROGRAM identifier .)
    LPAREN          shift and go to state 22


state 7

    (125) identifier -> IDENTIFIER .

    LPAREN          reduce using rule 125 (identifier -> IDENTIFIER .)
    SEMI_COLON      reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_END    reduce using rule 125 (identifier -> IDENTIFIER .)
    ASSIGNMENT      reduce using rule 125 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 125 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 125 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 125 (identifier -> IDENTIFIER .)
    *               reduce using rule 125 (identifier -> IDENTIFIER .)
    /               reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_DIV    reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_MOD    reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_AND    reduce using rule 125 (identifier -> IDENTIFIER .)
    =               reduce using rule 125 (identifier -> IDENTIFIER .)
    NOTEQ           reduce using rule 125 (identifier -> IDENTIFIER .)
    <               reduce using rule 125 (identifier -> IDENTIFIER .)
    >               reduce using rule 125 (identifier -> IDENTIFIER .)
    LESSOREQ        reduce using rule 125 (identifier -> IDENTIFIER .)
    MOREOREQ        reduce using rule 125 (identifier -> IDENTIFIER .)
    +               reduce using rule 125 (identifier -> IDENTIFIER .)
    -               reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_OR     reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_THEN   reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_DO     reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_UNTIL  reduce using rule 125 (identifier -> IDENTIFIER .)
    RESERVED_TO     reduce using rule 125 (identifier -> IDENTIFIER .)


state 8

    (126) identifier -> RESERVED_STRING .

    LPAREN          reduce using rule 126 (identifier -> RESERVED_STRING .)
    SEMI_COLON      reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_END    reduce using rule 126 (identifier -> RESERVED_STRING .)
    ASSIGNMENT      reduce using rule 126 (identifier -> RESERVED_STRING .)
    COLON           reduce using rule 126 (identifier -> RESERVED_STRING .)
    COMMA           reduce using rule 126 (identifier -> RESERVED_STRING .)
    RPAREN          reduce using rule 126 (identifier -> RESERVED_STRING .)
    *               reduce using rule 126 (identifier -> RESERVED_STRING .)
    /               reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_DIV    reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_MOD    reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_AND    reduce using rule 126 (identifier -> RESERVED_STRING .)
    =               reduce using rule 126 (identifier -> RESERVED_STRING .)
    NOTEQ           reduce using rule 126 (identifier -> RESERVED_STRING .)
    <               reduce using rule 126 (identifier -> RESERVED_STRING .)
    >               reduce using rule 126 (identifier -> RESERVED_STRING .)
    LESSOREQ        reduce using rule 126 (identifier -> RESERVED_STRING .)
    MOREOREQ        reduce using rule 126 (identifier -> RESERVED_STRING .)
    +               reduce using rule 126 (identifier -> RESERVED_STRING .)
    -               reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_OR     reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_THEN   reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_DO     reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_UNTIL  reduce using rule 126 (identifier -> RESERVED_STRING .)
    RESERVED_TO     reduce using rule 126 (identifier -> RESERVED_STRING .)


state 9

    (129) program -> program_heading semicolon block . DOT

    DOT             shift and go to state 23


state 10

    (94) block -> declaration_part_list . statement_part
    (32) declaration_part_list -> declaration_part_list . declaration_entity
    (41) statement_part -> . compound_statement
    (78) declaration_entity -> . procedure_and_function_declaration_part
    (96) declaration_entity -> . variable_declaration_part
    (42) compound_statement -> . RESERVED_BEGIN statement_sequence RESERVED_END
    (18) procedure_and_function_declaration_part -> . function_declaration semicolon
    (14) variable_declaration_part -> . RESERVED_VAR variable_declaration_list semicolon
    (28) function_declaration -> . function_identification semicolon function_block
    (29) function_declaration -> . function_heading semicolon function_block
    (39) function_identification -> . RESERVED_FUNCTION identifier
    (30) function_heading -> . RESERVED_FUNCTION identifier COLON result_type
    (31) function_heading -> . RESERVED_FUNCTION identifier marker_fh formal_parameter_list COLON result_type

    RESERVED_BEGIN  shift and go to state 16
    RESERVED_VAR    shift and go to state 18
    RESERVED_FUNCTION shift and go to state 21

    statement_part                 shift and go to state 24
    declaration_entity             shift and go to state 25
    compound_statement             shift and go to state 13
    procedure_and_function_declaration_part shift and go to state 14
    variable_declaration_part      shift and go to state 15
    function_declaration           shift and go to state 17
    function_identification        shift and go to state 19
    function_heading               shift and go to state 20

state 11

    (95) block -> statement_part .

    DOT             reduce using rule 95 (block -> statement_part .)
    SEMI_COLON      reduce using rule 95 (block -> statement_part .)


state 12

    (33) declaration_part_list -> declaration_entity .

    RESERVED_BEGIN  reduce using rule 33 (declaration_part_list -> declaration_entity .)
    RESERVED_VAR    reduce using rule 33 (declaration_part_list -> declaration_entity .)
    RESERVED_FUNCTION reduce using rule 33 (declaration_part_list -> declaration_entity .)


state 13

    (41) statement_part -> compound_statement .

    DOT             reduce using rule 41 (statement_part -> compound_statement .)
    SEMI_COLON      reduce using rule 41 (statement_part -> compound_statement .)


state 14

    (78) declaration_entity -> procedure_and_function_declaration_part .

    RESERVED_BEGIN  reduce using rule 78 (declaration_entity -> procedure_and_function_declaration_part .)
    RESERVED_VAR    reduce using rule 78 (declaration_entity -> procedure_and_function_declaration_part .)
    RESERVED_FUNCTION reduce using rule 78 (declaration_entity -> procedure_and_function_declaration_part .)


state 15

    (96) declaration_entity -> variable_declaration_part .

    RESERVED_BEGIN  reduce using rule 96 (declaration_entity -> variable_declaration_part .)
    RESERVED_VAR    reduce using rule 96 (declaration_entity -> variable_declaration_part .)
    RESERVED_FUNCTION reduce using rule 96 (declaration_entity -> variable_declaration_part .)


state 16

    (42) compound_statement -> RESERVED_BEGIN . statement_sequence RESERVED_END
    (44) statement_sequence -> . statement_sequence semicolon statement
    (45) statement_sequence -> . statement
    (46) statement -> . open_statement
    (47) statement -> . closed_statement
    (48) open_statement -> . non_labeled_open_statement
    (49) closed_statement -> . non_labeled_closed_statement
    (57) non_labeled_open_statement -> . open_if_statement
    (58) non_labeled_open_statement -> . open_while_statement
    (59) non_labeled_open_statement -> . open_for_statement
    (50) non_labeled_closed_statement -> . assignment_statement
    (51) non_labeled_closed_statement -> . procedure_statement
    (52) non_labeled_closed_statement -> . compound_statement
    (53) non_labeled_closed_statement -> . repeat_statement
    (54) non_labeled_closed_statement -> . closed_while_statement
    (55) non_labeled_closed_statement -> . closed_for_statement
    (56) non_labeled_closed_statement -> .
    (68) open_if_statement -> . RESERVED_IF boolean_expression RESERVED_THEN marker_for_branching statement
    (62) open_while_statement -> . RESERVED_WHILE boolean_expression marker_while RESERVED_DO open_statement
    (65) open_for_statement -> . RESERVED_FOR control_variable ASSIGNMENT initial_value direction final_value marker_for_for_branching RESERVED_DO open_statement
    (71) assignment_statement -> . variable_access ASSIGNMENT expression
    (76) procedure_statement -> . identifier params
    (77) procedure_statement -> . identifier
    (42) compound_statement -> . RESERVED_BEGIN statement_sequence RESERVED_END
    (60) repeat_statement -> . RESERVED_REPEAT repeat_begin_marker statement_sequence RESERVED_UNTIL boolean_expression
    (63) closed_while_statement -> . RESERVED_WHILE boolean_expression marker_while RESERVED_DO closed_statement
    (66) closed_for_statement -> . RESERVED_FOR control_variable ASSIGNMENT initial_value direction final_value marker_for_for_branching RESERVED_DO closed_statement
    (72) variable_access -> . identifier
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING

    RESERVED_END    reduce using rule 56 (non_labeled_closed_statement -> .)
    SEMI_COLON      reduce using rule 56 (non_labeled_closed_statement -> .)
    RESERVED_IF     shift and go to state 41
    RESERVED_WHILE  shift and go to state 42
    RESERVED_FOR    shift and go to state 43
    RESERVED_BEGIN  shift and go to state 16
    RESERVED_REPEAT shift and go to state 46
    IDENTIFIER      shift and go to state 7
    RESERVED_STRING shift and go to state 8

    statement_sequence             shift and go to state 26
    statement                      shift and go to state 27
    open_statement                 shift and go to state 28
    closed_statement               shift and go to state 29
    non_labeled_open_statement     shift and go to state 30
    non_labeled_closed_statement   shift and go to state 31
    open_if_statement              shift and go to state 32
    open_while_statement           shift and go to state 33
    open_for_statement             shift and go to state 34
    assignment_statement           shift and go to state 35
    procedure_statement            shift and go to state 36
    compound_statement             shift and go to state 37
    repeat_statement               shift and go to state 38
    closed_while_statement         shift and go to state 39
    closed_for_statement           shift and go to state 40
    variable_access                shift and go to state 44
    identifier                     shift and go to state 45

state 17

    (18) procedure_and_function_declaration_part -> function_declaration . semicolon
    (127) semicolon -> . SEMI_COLON

    SEMI_COLON      shift and go to state 5

    semicolon                      shift and go to state 47

state 18

    (14) variable_declaration_part -> RESERVED_VAR . variable_declaration_list semicolon
    (16) variable_declaration_list -> . variable_declaration_list semicolon variable_declaration
    (17) variable_declaration_list -> . variable_declaration
    (15) variable_declaration -> . identifier_list COLON type_denoter
    (4) identifier_list -> . identifier_list comma identifier
    (5) identifier_list -> . identifier
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING

    IDENTIFIER      shift and go to state 7
    RESERVED_STRING shift and go to state 8

    variable_declaration_list      shift and go to state 48
    variable_declaration           shift and go to state 49
    identifier_list                shift and go to state 50
    identifier                     shift and go to state 51

state 19

    (28) function_declaration -> function_identification . semicolon function_block
    (127) semicolon -> . SEMI_COLON

    SEMI_COLON      shift and go to state 5

    semicolon                      shift and go to state 52

state 20

    (29) function_declaration -> function_heading . semicolon function_block
    (127) semicolon -> . SEMI_COLON

    SEMI_COLON      shift and go to state 5

    semicolon                      shift and go to state 53

state 21

    (39) function_identification -> RESERVED_FUNCTION . identifier
    (30) function_heading -> RESERVED_FUNCTION . identifier COLON result_type
    (31) function_heading -> RESERVED_FUNCTION . identifier marker_fh formal_parameter_list COLON result_type
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING

    IDENTIFIER      shift and go to state 7
    RESERVED_STRING shift and go to state 8

    identifier                     shift and go to state 54

state 22

    (131) program_heading -> RESERVED_PROGRAM identifier LPAREN . identifier_list RPAREN
    (4) identifier_list -> . identifier_list comma identifier
    (5) identifier_list -> . identifier
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING

    IDENTIFIER      shift and go to state 7
    RESERVED_STRING shift and go to state 8

    identifier                     shift and go to state 51
    identifier_list                shift and go to state 55

state 23

    (129) program -> program_heading semicolon block DOT .

    $end            reduce using rule 129 (program -> program_heading semicolon block DOT .)


state 24

    (94) block -> declaration_part_list statement_part .

    DOT             reduce using rule 94 (block -> declaration_part_list statement_part .)
    SEMI_COLON      reduce using rule 94 (block -> declaration_part_list statement_part .)


state 25

    (32) declaration_part_list -> declaration_part_list declaration_entity .

    RESERVED_BEGIN  reduce using rule 32 (declaration_part_list -> declaration_part_list declaration_entity .)
    RESERVED_VAR    reduce using rule 32 (declaration_part_list -> declaration_part_list declaration_entity .)
    RESERVED_FUNCTION reduce using rule 32 (declaration_part_list -> declaration_part_list declaration_entity .)


state 26

    (42) compound_statement -> RESERVED_BEGIN statement_sequence . RESERVED_END
    (44) statement_sequence -> statement_sequence . semicolon statement
    (127) semicolon -> . SEMI_COLON

    RESERVED_END    shift and go to state 56
    SEMI_COLON      shift and go to state 5

    semicolon                      shift and go to state 57

state 27

    (45) statement_sequence -> statement .

    RESERVED_END    reduce using rule 45 (statement_sequence -> statement .)
    SEMI_COLON      reduce using rule 45 (statement_sequence -> statement .)
    RESERVED_UNTIL  reduce using rule 45 (statement_sequence -> statement .)


state 28

    (46) statement -> open_statement .

    RESERVED_END    reduce using rule 46 (statement -> open_statement .)
    SEMI_COLON      reduce using rule 46 (statement -> open_statement .)
    RESERVED_UNTIL  reduce using rule 46 (statement -> open_statement .)


state 29

    (47) statement -> closed_statement .

    RESERVED_END    reduce using rule 47 (statement -> closed_statement .)
    SEMI_COLON      reduce using rule 47 (statement -> closed_statement .)
    RESERVED_UNTIL  reduce using rule 47 (statement -> closed_statement .)


state 30

    (48) open_statement -> non_labeled_open_statement .

    RESERVED_END    reduce using rule 48 (open_statement -> non_labeled_open_statement .)
    SEMI_COLON      reduce using rule 48 (open_statement -> non_labeled_open_statement .)
    RESERVED_UNTIL  reduce using rule 48 (open_statement -> non_labeled_open_statement .)


state 31

    (49) closed_statement -> non_labeled_closed_statement .

    RESERVED_END    reduce using rule 49 (closed_statement -> non_labeled_closed_statement .)
    SEMI_COLON      reduce using rule 49 (closed_statement -> non_labeled_closed_statement .)
    RESERVED_UNTIL  reduce using rule 49 (closed_statement -> non_labeled_closed_statement .)


state 32

    (57) non_labeled_open_statement -> open_if_statement .

    RESERVED_END    reduce using rule 57 (non_labeled_open_statement -> open_if_statement .)
    SEMI_COLON      reduce using rule 57 (non_labeled_open_statement -> open_if_statement .)
    RESERVED_UNTIL  reduce using rule 57 (non_labeled_open_statement -> open_if_statement .)


state 33

    (58) non_labeled_open_statement -> open_while_statement .

    RESERVED_END    reduce using rule 58 (non_labeled_open_statement -> open_while_statement .)
    SEMI_COLON      reduce using rule 58 (non_labeled_open_statement -> open_while_statement .)
    RESERVED_UNTIL  reduce using rule 58 (non_labeled_open_statement -> open_while_statement .)


state 34

    (59) non_labeled_open_statement -> open_for_statement .

    RESERVED_END    reduce using rule 59 (non_labeled_open_statement -> open_for_statement .)
    SEMI_COLON      reduce using rule 59 (non_labeled_open_statement -> open_for_statement .)
    RESERVED_UNTIL  reduce using rule 59 (non_labeled_open_statement -> open_for_statement .)


state 35

    (50) non_labeled_closed_statement -> assignment_statement .

    RESERVED_END    reduce using rule 50 (non_labeled_closed_statement -> assignment_statement .)
    SEMI_COLON      reduce using rule 50 (non_labeled_closed_statement -> assignment_statement .)
    RESERVED_UNTIL  reduce using rule 50 (non_labeled_closed_statement -> assignment_statement .)


state 36

    (51) non_labeled_closed_statement -> procedure_statement .

    RESERVED_END    reduce using rule 51 (non_labeled_closed_statement -> procedure_statement .)
    SEMI_COLON      reduce using rule 51 (non_labeled_closed_statement -> procedure_statement .)
    RESERVED_UNTIL  reduce using rule 51 (non_labeled_closed_statement -> procedure_statement .)


state 37

    (52) non_labeled_closed_statement -> compound_statement .

    RESERVED_END    reduce using rule 52 (non_labeled_closed_statement -> compound_statement .)
    SEMI_COLON      reduce using rule 52 (non_labeled_closed_statement -> compound_statement .)
    RESERVED_UNTIL  reduce using rule 52 (non_labeled_closed_statement -> compound_statement .)


state 38

    (53) non_labeled_closed_statement -> repeat_statement .

    RESERVED_END    reduce using rule 53 (non_labeled_closed_statement -> repeat_statement .)
    SEMI_COLON      reduce using rule 53 (non_labeled_closed_statement -> repeat_statement .)
    RESERVED_UNTIL  reduce using rule 53 (non_labeled_closed_statement -> repeat_statement .)


state 39

    (54) non_labeled_closed_statement -> closed_while_statement .

    RESERVED_END    reduce using rule 54 (non_labeled_closed_statement -> closed_while_statement .)
    SEMI_COLON      reduce using rule 54 (non_labeled_closed_statement -> closed_while_statement .)
    RESERVED_UNTIL  reduce using rule 54 (non_labeled_closed_statement -> closed_while_statement .)


state 40

    (55) non_labeled_closed_statement -> closed_for_statement .

    RESERVED_END    reduce using rule 55 (non_labeled_closed_statement -> closed_for_statement .)
    SEMI_COLON      reduce using rule 55 (non_labeled_closed_statement -> closed_for_statement .)
    RESERVED_UNTIL  reduce using rule 55 (non_labeled_closed_statement -> closed_for_statement .)


state 41

    (68) open_if_statement -> RESERVED_IF . boolean_expression RESERVED_THEN marker_for_branching statement
    (91) boolean_expression -> . expression
    (97) expression -> . simple_expression
    (98) expression -> . simple_expression relop simple_expression
    (26) simple_expression -> . term
    (27) simple_expression -> . simple_expression addop term
    (99) term -> . factor
    (100) term -> . term mulop factor
    (101) factor -> . sign factor
    (102) factor -> . exponentiation
    (1) sign -> . +
    (2) sign -> . -
    (103) exponentiation -> . primary
    (35) primary -> . variable_access
    (36) primary -> . unsigned_constant
    (37) primary -> . function_designator
    (104) primary -> . LPAREN expression RPAREN
    (105) primary -> . RESERVED_NOT primary
    (72) variable_access -> . identifier
    (92) unsigned_constant -> . unsigned_number
    (93) unsigned_constant -> . STRING
    (110) function_designator -> . identifier params
    (125) identifier -> . IDENTIFIER
    (126) identifier -> . RESERVED_STRING
    (106) unsigned_number -> . unsigned_integer
    (107) unsigned_number -> . unsigned_real
